// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_channel/sidebar_direct_channel should match snapshot 1`] = `
<Connect(SidebarChannelLink)
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "O",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <StatusIconNew
      className=""
      status=""
    />
  }
  isCollapsed={false}
  label="channel_display_name"
  link="/team_name/messages/@some-user"
/>
`;

exports[`components/sidebar/sidebar_channel/sidebar_direct_channel should match snapshot if DM is with bot with custom icon 1`] = `
<Connect(SidebarChannelLink)
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "O",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <InlineSVG
      cacheRequests={true}
      className="icon icon-robot-happy"
      onError={[Function]}
      onLoad={[Function]}
      src="http://a.fake.url"
      uniquifyIDs={false}
    />
  }
  isCollapsed={false}
  label="channel_display_name"
  link="/team_name/messages/@some-user"
/>
`;

exports[`components/sidebar/sidebar_channel/sidebar_direct_channel should match snapshot if DM is with current user 1`] = `
<Connect(SidebarChannelLink)
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "O",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <StatusIconNew
      className=""
      status=""
    />
  }
  isCollapsed={false}
  label="channel_display_name (you)"
  link="/team_name/messages/@some-user"
/>
`;

exports[`components/sidebar/sidebar_channel/sidebar_direct_channel should match snapshot if DM is with deleted user 1`] = `
<Connect(SidebarChannelLink)
  channel={
    Object {
      "create_at": 0,
      "creator_id": "",
      "delete_at": 0,
      "display_name": "channel_display_name",
      "extra_update_at": 0,
      "group_constrained": false,
      "header": "",
      "id": "channel_id",
      "last_post_at": 0,
      "name": "",
      "purpose": "",
      "scheme_id": "",
      "team_id": "",
      "total_msg_count": 0,
      "type": "O",
      "update_at": 0,
    }
  }
  closeHandler={[Function]}
  icon={
    <i
      className="icon icon-archive-outline"
    />
  }
  isCollapsed={false}
  label="channel_display_name"
  link="/team_name/messages/@some-user"
/>
`;
